test/error/MethodNonstaticClassStatic.ci
public static class Test
{
	public bool Run() //ERROR: Only static methods allowed in a static class
	{
		return true;
	}
}
